test/traefik-whoami/whoami.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami
  labels:
    app: whoami

spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - name: web
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: whoami

spec:
  ports:
    - name: web
      port: 80
      targetPort: web

  selector:
    app: whoami
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: (Host(`localhost`) || Host(`whoami`)) && PathPrefix(`/`)
      services:
        - name: whoami
          port: 80
    - kind: Rule
      match: Host(`localhost`,`whoami`) && PathPrefix(`/whoami1`)
      services:
        - name: whoami
          port: 80
    - kind: Rule
      match: Host(`localhost`, `whoami`) && PathPrefix(`/whoami2`)
      services:
        - name: whoami
          port: 80
